--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cui-controls",
-  "version": "6.2.1",
+  "version": "6.2.2",
   "dependencies": {
     "@angular/common": "^6.0.9",
     "@angular/core": "^6.0.9",
@@ -8,10 +8,13 @@
     "@angular/platform-browser": "^6.0.9",
     "@angular/router": "^6.0.9",
     "@ng-select/ng-select": "^2.6.0",
+    "angular-tree-component": "^7.2.1",
     "ngx-bootstrap": "^3.0.1",
     "ol": "5.0.0",
     "proj4": "^2.4.4",
-    "rxjs": "6.0.0"
+    "rxjs": "6.0.0",
+    "lodash": "^4.17.15",
+    "@types/lodash": "^4.14.108"
   },
   "main": "dist/cui-controls.module.js",
   "devDependencies": {
