--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "cui-controls",
-  "version": "6.2.2",
+  "version": "6.2.3",
   "dependencies": {
     "@angular/common": "^6.0.9",
     "@angular/core": "^6.0.9",
     "@angular/forms": "^6.0.9",
     "@angular/platform-browser": "^6.0.9",
     "@angular/router": "^6.0.9",
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "@ng-select/ng-select": "^2.6.0",
+    "@types/lodash": "^4.14.108",
     "angular-tree-component": "^7.2.1",
+    "lodash": "^4.17.15",
     "ngx-bootstrap": "^3.0.1",
     "ol": "5.0.0",
     "proj4": "^2.4.4",
-    "rxjs": "6.0.0",
-    "lodash": "^4.17.15",
-    "@types/lodash": "^4.14.108"
+    "rxjs": "6.0.0"
   },
   "main": "dist/cui-controls.module.js",
   "devDependencies": {
